--- a/my-app/package.json
+++ b/my-app/package.json
@@ -47,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
